<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.mallya.manageeasy.Funds_3"
    android:scrollbars="none">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FundsOverview"
        android:id="@+id/button_Overview"
        android:background="@drawable/gradient_blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        style="@style/ButtonText"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddFunds"
        android:id="@+id/button_AddFunds"
        android:background="@drawable/gradient_blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        style="@style/ButtonText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UpdateFunds"
        android:id="@+id/button_UpdateFunds"
        android:background="@drawable/gradient_blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        style="@style/ButtonText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DeleteFunds"
        android:id="@+id/button_DeleteFunds"
        android:background="@drawable/gradient_blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        style="@style/ButtonText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListAllFund"
        android:id="@+id/button_ListAllFunds"
        android:background="@drawable/gradient_blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        style="@style/ButtonText"/>

</LinearLayout>
    </ScrollView>