<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.mallya.manageeasy.Inventory_3"
    android:scrollbars="none">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="INVENTORY Overview"
        android:id="@+id/button_Overview"
        android:background="@drawable/gradient_blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        style="@style/ButtonText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddInventory"
        android:id="@+id/button_AddInventory"
        android:background="@drawable/gradient_blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        style="@style/ButtonText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UpdateInventory"
        android:id="@+id/button_UpdateInventory"
        android:background="@drawable/gradient_blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        style="@style/ButtonText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DeleteInventory"
        android:id="@+id/button_DeleteInventory"
        android:background="@drawable/gradient_blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        style="@style/ButtonText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LIST ALL INVENTORY"
        android:id="@+id/button_ListALLInventory"
        android:background="@drawable/gradient_blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        style="@style/ButtonText"/>

</LinearLayout>
    </ScrollView>